Prevent bad line-break on IOTA variable source

--- a/_source/stylesheets/pages/_regions-and-subprefectures.scss
+++ b/_source/stylesheets/pages/_regions-and-subprefectures.scss
@@ -66,6 +66,8 @@
 
 	font-style: italic;
 
+	white-space: nowrap;
+
 	cursor: help;
 
 	border-bottom: 1px dotted;
@@ -96,6 +98,7 @@
 	font-weight: normal;
 
 	text-decoration: none;
+	white-space: normal;
 
 	border-bottom: inherit;
 
